--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Padauk&family=Rubik:wght@400;500;600&display=swap');
+
+:root{
+    --violet: rgb( 161, 132, 240);
+    --turquoise: #2fdabd;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+    height: 100vh;
+    background: url('https://images.unsplash.com/photo-1612863229236-60722f5ef8c9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card_weather{
+    width: 50%;
+    padding: 20px;
+    background: rgba( 255, 255, 255, 0.05);
+    box-shadow: 0px 15px 135px rgba(0, 0, 0, 0.774);
+    border-radius: 10px;    
+    text-align: center;
+    backdrop-filter: blur(10px);
+    font-family: 'Rubik', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text_gradient{
+    background: #ccc;
+    background: linear-gradient(270deg, var(--violet), var(--turquoise));
+    background-clip: text; 
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.text_gradient button{
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    font-weight: 900;
+    border: 1px solid turquoise;
+    cursor: pointer;
+    transition: all 300ms linear;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text_gradient button:hover{
+    background: rgba(180, 224, 219, 0.863);
+    -webkit-text-fill-color: rgb(190, 83, 190);
 }
+
+.card_weather img{
+    width: 270px;
+}
+
+.card_weather h1{
+    font-size: 40px;
+}
+
+.loader{
+    border: 4px solid rgba(0,0,0, .1);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+
+    border-left-color: #ce5bce;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg)
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
